More advanced check update scripts. Include all tools I love

--- a/.meta/starship/config.toml
+++ b/.meta/starship/config.toml
@@ -2,6 +2,7 @@ add_newline = true
 
 [aws]
 symbol = "aws "
+format = 'on [$symbol($profile )(\($region\) )(\[$duration\] )]($style)'
 
 [kubernetes]
 disabled = false
