--- a/config.yaml
+++ b/config.yaml
@@ -1,18 +1,19 @@
+---
 awsVaultProfile: default
 
 # Use "alpine" if you don't need tests
-image: golang:{{ .version }}-alpine
+image: golang:{{ .version }}
 
 # Adding new tools require changing Dockerfile.tmpl
 tools:
   golang/go: 1.17.3
   golangci/golangci-lint: 1.43.0
 
-  hashicorp/terraform: 1.0.3
-  gruntwork-io/terragrunt: 0.35.12
+  hashicorp/terraform: 1.0.11
+  gruntwork-io/terragrunt: 0.35.13
   terraform-linters/tflint: 0.33.1
   terraform-linters/tflint-ruleset-aws: 0.9.0
-  aquasecurity/tfsec: 0.60.1
+  aquasecurity/tfsec: 0.61.3
   terraform-docs/terraform-docs: 0.16.0
   accurics/terrascan: 1.12.0
 
@@ -21,15 +22,27 @@ tools:
   ahmetb/kubectx: 0.9.4
 
   casey/just: 0.10.4
-  direnv/direnv: 2.28.0
+  direnv/direnv: 2.29.0
   starship/starship: 1.0.0
 
   1password: 1.12.3
   mozilla/sops: 3.7.1
   harness/drone-cli: 1.4.0
 
+  # check version here https://github.com/aws/aws-cli/tags
+  awscli: 2.4.3
+
+  pip:
+    pre-commit: 2.15.0
+    yamllint: 1.26.3
+
 dotenv:
   COMPOSE_PROJECT_NAME: TF-INFRA
+  OP_ADDRESS: ""
+  OP_EMAIL: ""
+  OP_SECRET_KEY: ""
+  OP_PASSWORD: ""
+  GH_BASIC_AUTH: ""
 
 extraPackages:
   - rsync
