--- a/config.yaml
+++ b/config.yaml
@@ -7,29 +7,30 @@ image: golang:{{ .version }}
 # Adding new tools require changing Dockerfile.tmpl
 tools:
   golang/go: 1.17.3
-  golangci/golangci-lint: 1.43.0
-
-  hashicorp/terraform: 1.0.11
-  gruntwork-io/terragrunt: 0.35.13
-  terraform-linters/tflint: 0.33.1
-  terraform-linters/tflint-ruleset-aws: 0.9.0
-  aquasecurity/tfsec: 0.61.3
-  terraform-docs/terraform-docs: 0.16.0
-  accurics/terrascan: 1.12.0
-
-  hadolint/hadolint: 2.8.0
   kubernetes/kubectl: 1.22.4
-  ahmetb/kubectx: 0.9.4
-
-  casey/just: 0.10.4
-  direnv/direnv: 2.29.0
-  starship/starship: 1.0.0
-
   1password: 1.12.3
-  mozilla/sops: 3.7.1
-  harness/drone-cli: 1.4.0
-
   awscli: 2.4.3
+
+  github:
+    golangci/golangci-lint: 1.43.0
+
+    hashicorp/terraform: 1.0.11
+    gruntwork-io/terragrunt: 0.35.13
+    terraform-linters/tflint: 0.33.1
+    terraform-linters/tflint-ruleset-aws: 0.9.0
+    aquasecurity/tfsec: 0.61.3
+    terraform-docs/terraform-docs: 0.16.0
+    accurics/terrascan: 1.12.0
+
+    hadolint/hadolint: 2.8.0
+    ahmetb/kubectx: 0.9.4
+
+    casey/just: 0.10.4
+    direnv/direnv: 2.29.0
+    starship/starship: 1.0.0
+
+    mozilla/sops: 3.7.1
+    harness/drone-cli: 1.4.0
 
   pip:
     pre-commit: 2.16.0
