--- a/config.yaml
+++ b/config.yaml
@@ -8,6 +8,7 @@ image: golang:{{ .version }}
 tools:
   golang/go: 1.17.3
   kubernetes/kubectl: 1.22.4
+  awslabs/git-secrets: 1.3.0
   1password: 1.12.3
   awscli: 2.4.4
 
