--- a/config.yaml
+++ b/config.yaml
@@ -10,7 +10,7 @@ tools:
   kubernetes/kubectl: 1.22.4
   awslabs/git-secrets: 1.3.0
   1password: 1.12.3
-  awscli: 2.4.4
+  aws/aws-cli: 2.4.4
 
   github:
     golangci/golangci-lint: 1.43.0
