--- a/config.yaml
+++ b/config.yaml
@@ -14,16 +14,18 @@ tools:
   github:
     golangci/golangci-lint: 1.43.0
 
-    hashicorp/terraform: 1.0.11
+    hashicorp/terraform: 1.1.0
     gruntwork-io/terragrunt: 0.35.13
     terraform-linters/tflint: 0.33.2
     terraform-linters/tflint-ruleset-aws: 0.10.0
     aquasecurity/tfsec: 0.63.1
-    terraform-docs/terraform-docs: 0.16.0
     accurics/terrascan: 1.12.0
+    terraform-docs/terraform-docs: 0.16.0
+
+    ahmetb/kubectx: 0.9.4
 
     hadolint/hadolint: 2.8.0
-    ahmetb/kubectx: 0.9.4
+    zricethezav/gitleaks: 8.1.3
 
     casey/just: 0.10.5
     direnv/direnv: 2.29.0
