--- a/config.yaml
+++ b/config.yaml
@@ -9,15 +9,15 @@ tools:
   golang/go: 1.17.4
   kubernetes/kubectl: 1.23.0
   1password: 1.12.3
-  aws/aws-cli: 2.4.5
+  aws/aws-cli: 2.4.6
 
   github:
     golangci/golangci-lint: 1.43.0
 
     hashicorp/terraform: 1.1.0
-    gruntwork-io/terragrunt: 0.35.13
-    terraform-linters/tflint: 0.33.2
-    terraform-linters/tflint-ruleset-aws: 0.10.0
+    gruntwork-io/terragrunt: 0.35.14
+    terraform-linters/tflint: 0.34.0
+    terraform-linters/tflint-ruleset-aws: 0.10.1
     aquasecurity/tfsec: 0.63.1
     accurics/terrascan: 1.12.0
     terraform-docs/terraform-docs: 0.16.0
@@ -25,11 +25,12 @@ tools:
     ahmetb/kubectx: 0.9.4
 
     hadolint/hadolint: 2.8.0
-    zricethezav/gitleaks: 8.1.3
+    zricethezav/gitleaks: 8.2.1
 
     casey/just: 0.10.5
     direnv/direnv: 2.29.0
     starship/starship: 1.0.0
+    neovim/neovim: 0.6.0
 
     mozilla/sops: 3.7.1
     harness/drone-cli: 1.4.0
@@ -48,3 +49,4 @@ dotenv:
 
 extraPackages:
   - rsync
+  - graphviz
