--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - .meta/var/op:/home/user/.config/op
       - .meta/var/kube:/home/user/.kube
       - .meta/var/.bash_history:/home/user/.bash_history
+      - .meta/var/zsh:/home/user/.zsh_tmp
     env_file:
       - .env
     environment:
