--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,7 @@
 ---
-awsVaultProfile: default
+awsVaultProfiles: [ default ]
+
+shell: zsh
 
 # Use "alpine" if you don't need tests
 image: golang:{{ .version }}
@@ -9,7 +11,12 @@ tools:
   golang/go: 1.17.5
   kubernetes/kubectl: 1.23.1
   1password: 1.12.3
-  aws/aws-cli: 2.4.6
+  aws/aws-cli: 2.4.7
+
+  zsh-users/zsh-autosuggestions: 0.7.0
+  zsh-users/zsh-syntax-highlighting: 0.7.1
+  zsh-users/zsh-completions: 0.33.0
+  softmoth/zsh-vim-mode: 1f9953b
 
   github:
     golangci/golangci-lint: 1.43.0
@@ -22,16 +29,18 @@ tools:
     accurics/terrascan: 1.12.0
     terraform-docs/terraform-docs: 0.16.0
 
+    helm/helm: 3.7.2
     ahmetb/kubectx: 0.9.4
     argoproj/argo-cd: 2.2.1
 
     hadolint/hadolint: 2.8.0
-    zricethezav/gitleaks: 8.2.3
+    zricethezav/gitleaks: 8.2.4
 
     casey/just: 0.10.5
     direnv/direnv: 2.29.0
-    starship/starship: 1.0.0
+    starship/starship: 1.1.1
     neovim/neovim: 0.6.0
+    junegunn/fzf: 0.28.0
 
     mozilla/sops: 3.7.1
     harness/drone-cli: 1.4.0
@@ -51,3 +60,5 @@ dotenv:
 extraPackages:
   - rsync
   - graphviz
+  - zsh
+  - bsdmainutils
