--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - .:/workspace
       - ~/.ssh:/home/user/.ssh
       - .meta/var/op:/home/user/.config/op
+      - .meta/nvim:/home/user/.config/nvim
       - .meta/var/kube:/home/user/.kube
       - .meta/var/.bash_history:/home/user/.bash_history
       - .meta/var/zsh:/home/user/.zsh_tmp
