--- a/config.yaml
+++ b/config.yaml
@@ -8,25 +8,27 @@ image: golang:{{ .version }}
 
 # Adding new tools require changing Dockerfile.tmpl
 tools:
-  golang/go: 1.17.5
+  golang/go: 1.17.6
   kubernetes/kubectl: 1.23.1
   1password: 1.12.3
-  aws/aws-cli: 2.4.7
+  aws/aws-cli: 2.4.10
 
   zsh-users/zsh-autosuggestions: 0.7.0
   zsh-users/zsh-syntax-highlighting: 0.7.1
   zsh-users/zsh-completions: 0.33.0
   softmoth/zsh-vim-mode: 1f9953b
 
+  junegunn/vim-plug: 68488fd
+
   github:
     golangci/golangci-lint: 1.43.0
 
-    hashicorp/terraform: 1.1.2
+    hashicorp/terraform: 1.1.3
     gruntwork-io/terragrunt: 0.35.16
     terraform-linters/tflint: 0.34.1
-    terraform-linters/tflint-ruleset-aws: 0.10.1
+    terraform-linters/tflint-ruleset-aws: 0.11.0
     aquasecurity/tfsec: 0.63.1
-    accurics/terrascan: 1.12.0
+    accurics/terrascan: 1.13.0
     terraform-docs/terraform-docs: 0.16.0
 
     helm/helm: 3.7.2
@@ -34,16 +36,16 @@ tools:
     argoproj/argo-cd: 2.2.2
 
     hadolint/hadolint: 2.8.0
-    zricethezav/gitleaks: 8.2.5
+    zricethezav/gitleaks: 8.2.7
 
     casey/just: 0.10.5
-    direnv/direnv: 2.30.2
+    direnv/direnv: 2.30.3
     starship/starship: 1.1.1
     neovim/neovim: 0.6.1
     junegunn/fzf: 0.29.0
 
     mozilla/sops: 3.7.1
-    harness/drone-cli: 1.4.0
+    harness/drone-cli: 1.5.0
 
   pip:
     pre-commit: 2.16.0
