--- a/config.yaml
+++ b/config.yaml
@@ -9,38 +9,39 @@ image: golang:{{ .version }}
 # Adding new tools require changing Dockerfile.tmpl
 tools:
   golang/go: 1.17.6
-  kubernetes/kubectl: 1.23.1
-  1password: 1.12.3
-  aws/aws-cli: 2.4.10
+  kubernetes/kubectl: 1.23.3
+  1password: 1.12.4
+  aws/aws-cli: 2.4.15
 
   zsh-users/zsh-autosuggestions: 0.7.0
   zsh-users/zsh-syntax-highlighting: 0.7.1
   zsh-users/zsh-completions: 0.33.0
   softmoth/zsh-vim-mode: 1f9953b
 
-  junegunn/vim-plug: 68488fd
+  junegunn/vim-plug: e300178
 
   github:
-    golangci/golangci-lint: 1.43.0
+    golangci/golangci-lint: 1.44.0
 
-    hashicorp/terraform: 1.1.3
-    gruntwork-io/terragrunt: 0.35.16
+    hashicorp/terraform: 1.1.4
+    gruntwork-io/terragrunt: 0.36.1
     terraform-linters/tflint: 0.34.1
-    terraform-linters/tflint-ruleset-aws: 0.11.0
-    aquasecurity/tfsec: 0.63.1
+    terraform-linters/tflint-ruleset-aws: 0.12.0
+    aquasecurity/tfsec: 1.0.7
     accurics/terrascan: 1.13.0
     terraform-docs/terraform-docs: 0.16.0
 
-    helm/helm: 3.7.2
+    helm/helm: 3.8.0
     ahmetb/kubectx: 0.9.4
-    argoproj/argo-cd: 2.2.2
+    argoproj/argo-cd: 2.2.3
+    crossplane/crossplane: 1.6.2
 
     hadolint/hadolint: 2.8.0
     zricethezav/gitleaks: 8.2.7
 
-    casey/just: 0.10.5
+    casey/just: 0.10.7
     direnv/direnv: 2.30.3
-    starship/starship: 1.1.1
+    starship/starship: 1.2.1
     neovim/neovim: 0.6.1
     junegunn/fzf: 0.29.0
 
@@ -48,7 +49,7 @@ tools:
     harness/drone-cli: 1.5.0
 
   pip:
-    pre-commit: 2.16.0
+    pre-commit: 2.17.0
     yamllint: 1.26.3
 
 dotenv:
