--- a/config.yaml
+++ b/config.yaml
@@ -12,7 +12,7 @@ tools:
   golang/go: 1.17.6
   kubernetes/kubectl: 1.23.3
   1password: 1.12.4
-  aws/aws-cli: 2.4.16
+  aws/aws-cli: 2.4.17
 
   zsh-users/zsh-autosuggestions: 0.7.0
   zsh-users/zsh-syntax-highlighting: 0.7.1
@@ -28,13 +28,14 @@ tools:
     gruntwork-io/terragrunt: 0.36.1
     terraform-linters/tflint: 0.34.1
     terraform-linters/tflint-ruleset-aws: 0.12.0
-    aquasecurity/tfsec: 1.0.11
+    aquasecurity/tfsec: 1.1.2
     accurics/terrascan: 1.13.0
     terraform-docs/terraform-docs: 0.16.0
 
     helm/helm: 3.8.0
+    roboll/helmfile: 0.143.0
     ahmetb/kubectx: 0.9.4
-    argoproj/argo-cd: 2.2.4
+    argoproj/argo-cd: 2.2.5
     crossplane/crossplane: 1.6.2
     ahmetb/kubectl-tree: 0.4.1
     tohjustin/kube-lineage: 0.4.2
@@ -45,7 +46,7 @@ tools:
 
     casey/just: 0.11.0
     direnv/direnv: 2.30.3
-    starship/starship: 1.2.1
+    starship/starship: 1.3.0
     neovim/neovim: 0.6.1
     junegunn/fzf: 0.29.0
 
