--- a/config.yaml
+++ b/config.yaml
@@ -40,6 +40,7 @@ tools:
     ahmetb/kubectl-tree: 0.4.1
     tohjustin/kube-lineage: 0.4.2
     itaysk/kubectl-neat: 2.0.3
+    corneliusweig/ketall: 1.3.8
 
     hadolint/hadolint: 2.8.0
     zricethezav/gitleaks: 8.2.7
