--- a/config.yaml
+++ b/config.yaml
@@ -10,9 +10,9 @@ image: golang:{{ .version }}
 # Adding new tools require changing Dockerfile.tmpl
 tools:
   golang/go: 1.17.7
-  kubernetes/kubectl: 1.23.3
+  kubernetes/kubectl: 1.23.4
   1password: 1.12.4
-  aws/aws-cli: 2.4.18
+  aws/aws-cli: 2.4.19
 
   zsh-users/zsh-autosuggestions: 0.7.0
   zsh-users/zsh-syntax-highlighting: 0.7.1
@@ -22,18 +22,19 @@ tools:
   junegunn/vim-plug: e300178
 
   github:
-    golangci/golangci-lint: 1.44.1
+    golangci/golangci-lint: 1.44.2
 
     hashicorp/terraform: 1.1.6
     gruntwork-io/terragrunt: 0.36.1
     terraform-linters/tflint: 0.34.1
     terraform-linters/tflint-ruleset-aws: 0.12.0
-    aquasecurity/tfsec: 1.2.1
+    aquasecurity/tfsec: 1.4.1
     accurics/terrascan: 1.13.1
     terraform-docs/terraform-docs: 0.16.0
 
     helm/helm: 3.8.0
     roboll/helmfile: 0.143.0
+    databus23/helm-diff: 3.4.2
     ahmetb/kubectx: 0.9.4
     argoproj/argo-cd: 2.2.5
     crossplane/crossplane: 1.6.3
@@ -50,6 +51,7 @@ tools:
     starship/starship: 1.3.0
     neovim/neovim: 0.6.1
     junegunn/fzf: 0.29.0
+    zellij-org/zellij: 0.24.0
 
     mozilla/sops: 3.7.1
     harness/drone-cli: 1.5.0
