Proper helm plugins installation. Remove one pane from main tab. Aliases. Session names

--- a/.meta/zellij/config.yaml
+++ b/.meta/zellij/config.yaml
@@ -44,6 +44,8 @@ keybinds:
           key: [ Alt: '+']
         - action: [Resize: Decrease,]
           key: [ Alt: '-']
+        - action: [ WriteChars: " reset\n",]
+          key: [ Ctrl: 'k']
     locked:
         - action: [SwitchToMode: Normal,]
           key: [Ctrl: 'g',]
@@ -434,7 +436,7 @@ plugins:
 # Options:
 #   - true
 #   - false (Default)
-simplified_ui: true
+#simplified_ui: true
 
 # Choose the path to the default shell that zellij will use for opening new panes
 # Default: $SHELL
