--- a/.meta/zellij/layouts/default.yaml
+++ b/.meta/zellij/layouts/default.yaml
@@ -22,7 +22,5 @@ tabs:
   - name: "Main"
     focus: true
     direction: Vertical
-    parts:
-      - direction: Horizontal
-        focus: true
-      - direction: Horizontal
+
+  - name: "Reserve"
