Added ansible. Updated toolset

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - .meta/nvim:/home/user/.config/nvim
       - .meta/zellij:/home/user/.config/zellij
       - .meta/var/kube:/home/user/.kube
+      - .meta/.tflint.hcl:/home/user/.tflint.hcl
       - .meta/var/.bash_history:/home/user/.bash_history
       - .meta/var/zsh:/home/user/.zsh_tmp
     env_file:
