--- a/config.yaml
+++ b/config.yaml
@@ -12,7 +12,7 @@ tools:
   golang/go: 1.18
   kubernetes/kubectl: 1.23.5
   1password: 1.12.4
-  aws/aws-cli: 2.5.2
+  aws/aws-cli: 2.5.4
 
   zsh-users/zsh-autosuggestions: 0.7.0
   zsh-users/zsh-syntax-highlighting: 0.7.1
@@ -24,11 +24,11 @@ tools:
   github:
     golangci/golangci-lint: 1.45.2
 
-    hashicorp/terraform: 1.1.7
+    hashicorp/terraform: 1.1.8
     gruntwork-io/terragrunt: 0.36.6
     terraform-linters/tflint: 0.35.0
     terraform-linters/tflint-ruleset-aws: 0.13.2
-    aquasecurity/tfsec: 1.15.4
+    aquasecurity/tfsec: 1.18.0
     accurics/terrascan: 1.14.0
     terraform-docs/terraform-docs: 0.16.0
 
@@ -44,13 +44,13 @@ tools:
     corneliusweig/ketall: 1.3.8
 
     hadolint/hadolint: 2.10.0
-    zricethezav/gitleaks: 8.5.3
+    zricethezav/gitleaks: 8.6.1
 
     casey/just: 1.1.2
     direnv/direnv: 2.31.0
     starship/starship: 1.5.4
     neovim/neovim: 0.6.1
-    junegunn/fzf: 0.29.0
+    junegunn/fzf: 0.30.0
     zellij-org/zellij: 0.27.0
 
     mozilla/sops: 3.7.2
@@ -59,6 +59,8 @@ tools:
   pip:
     pre-commit: 2.18.1
     yamllint: 1.26.3
+    ansible: 5.6.0
+    hvac: 0.11.2
 
 dotenv:
   COMPOSE_PROJECT_NAME: TF-INFRA
