--- a/config.yaml
+++ b/config.yaml
@@ -26,8 +26,8 @@ tools:
 
     hashicorp/terraform: 1.1.9
     gruntwork-io/terragrunt: 0.36.10
-    terraform-linters/tflint: 0.36.0
-    terraform-linters/tflint-ruleset-aws: 0.13.3
+    terraform-linters/tflint: 0.36.1
+    terraform-linters/tflint-ruleset-aws: 0.13.4
     aquasecurity/tfsec: 1.19.1
     accurics/terrascan: 1.14.0
     terraform-docs/terraform-docs: 0.16.0
@@ -37,7 +37,7 @@ tools:
     databus23/helm-diff: 3.4.2
     ahmetb/kubectx: 0.9.4
     argoproj/argo-cd: 2.3.3
-    crossplane/crossplane: 1.6.5
+    crossplane/crossplane: 1.7.1
     ahmetb/kubectl-tree: 0.4.1
     tohjustin/kube-lineage: 0.5.0
     itaysk/kubectl-neat: 2.0.3
@@ -57,10 +57,11 @@ tools:
     harness/drone-cli: 1.5.0
 
   pip:
-    pre-commit: 2.18.1
+    pre-commit: 2.19.0
     yamllint: 1.26.3
     ansible: 5.7.1
     hvac: 0.11.2
+    ansible-lint: 6.0.2
 
 dotenv:
   COMPOSE_PROJECT_NAME: TF-INFRA
