--- a/config.yaml
+++ b/config.yaml
@@ -12,7 +12,7 @@ tools:
   golang/go: 1.18.2
   kubernetes/kubectl: 1.24.0
   1password: 1.12.4
-  aws/aws-cli: 2.6.3
+  aws/aws-cli: 2.6.4
 
   zsh-users/zsh-autosuggestions: 0.7.0
   zsh-users/zsh-syntax-highlighting: 0.7.1
@@ -22,14 +22,14 @@ tools:
   junegunn/vim-plug: e300178
 
   github:
-    golangci/golangci-lint: 1.46.0
+    golangci/golangci-lint: 1.46.1
 
     hashicorp/terraform: 1.1.9
-    gruntwork-io/terragrunt: 0.36.11
+    gruntwork-io/terragrunt: 0.37.0
     terraform-linters/tflint: 0.36.2
     terraform-linters/tflint-ruleset-aws: 0.13.4
     aquasecurity/tfsec: 1.21.0
-    accurics/terrascan: 1.15.0
+    tenable/terrascan: 1.15.0
     terraform-docs/terraform-docs: 0.16.0
 
     helm/helm: 3.8.2
