--- a/config.yaml
+++ b/config.yaml
@@ -46,11 +46,11 @@ tools:
     corneliusweig/ketall: 1.3.8
 
     hadolint/hadolint: 2.10.0
-    zricethezav/gitleaks: 8.8.4
+    zricethezav/gitleaks: 8.8.5
 
     casey/just: 1.1.3
     direnv/direnv: 2.31.0
-    starship/starship: 1.6.3
+    starship/starship: 1.7.1
     neovim/neovim: 0.7.0
     junegunn/fzf: 0.30.0
     zellij-org/zellij: 0.28.1
@@ -79,3 +79,4 @@ extraPackages:
   - graphviz
   - zsh
   - bsdmainutils
+  - man
