--- a/config.yaml
+++ b/config.yaml
@@ -22,11 +22,11 @@ tools:
   junegunn/vim-plug: 8fdabfb
 
   github:
-    golangci/golangci-lint: 1.47.3
+    golangci/golangci-lint: 1.48.0
 
     hashicorp/terraform: 1.2.6
-    gruntwork-io/terragrunt: 0.38.6
-    terraform-linters/tflint: 0.39.1
+    gruntwork-io/terragrunt: 0.38.7
+    terraform-linters/tflint: 0.39.2
     terraform-linters/tflint-ruleset-aws: 0.15.0
     aquasecurity/tfsec: 1.27.1
     tenable/terrascan: 1.15.2
@@ -45,19 +45,20 @@ tools:
     corneliusweig/ketall: 1.3.8
 
     hadolint/hadolint: 2.10.0
-    zricethezav/gitleaks: 8.9.0
+    zricethezav/gitleaks: 8.10.2
 
-    casey/just: 1.3.0
+    casey/just: 1.4.0
     direnv/direnv: 2.32.1
     starship/starship: 1.9.1
     neovim/neovim: 0.7.2
-    junegunn/fzf: 0.32.0
+    junegunn/fzf: 0.32.1
     zellij-org/zellij: 0.31.1
     extrawurst/gitui: 0.20.1
 
     mozilla/sops: 3.7.3
     FiloSottile/age: 1.0.0
     harness/drone-cli: 1.5.0
+    hashicorp/vault: 1.11.2
 
   pip:
     pre-commit: 2.20.0
