--- a/config.yaml
+++ b/config.yaml
@@ -9,11 +9,11 @@ image: golang:{{ .version }}
 
 # Adding new tools require changing Dockerfile.tmpl
 tools:
-  golang/go: 1.19
-  kubernetes/kubectl: 1.24.3
+  golang/go: 1.19.1
+  kubernetes/kubectl: 1.25.2
   1password: 1.12.5
-  aws/aws-cli: 2.7.21
-  GoogleCloudPlatform/cloud-sdk-docker: 397.0.0
+  aws/aws-cli: 2.7.35
+  GoogleCloudPlatform/cloud-sdk-docker: 403.0.0
 
   zsh-users/zsh-autosuggestions: 0.7.0
   zsh-users/zsh-syntax-highlighting: 0.7.1
@@ -22,50 +22,51 @@ tools:
   junegunn/vim-plug: 8fdabfb
 
   github:
-    golangci/golangci-lint: 1.48.0
+    golangci/golangci-lint: 1.50.0
 
-    hashicorp/terraform: 1.2.6
-    gruntwork-io/terragrunt: 0.38.7
-    terraform-linters/tflint: 0.39.2
-    terraform-linters/tflint-ruleset-aws: 0.15.0
-    aquasecurity/tfsec: 1.27.1
+    hashicorp/terraform: 1.3.2
+    gruntwork-io/terragrunt: 0.39.2
+    terraform-linters/tflint: 0.41.0
+    terraform-linters/tflint-ruleset-aws: 0.17.1
+    aquasecurity/tfsec: 1.28.0
     tenable/terrascan: 1.15.2
     terraform-docs/terraform-docs: 0.16.0
     plumber-cd/terraform-backend-git: 0.1.2
 
-    helm/helm: 3.9.2
+    helm/helm: 3.10.1
     roboll/helmfile: 0.144.0
-    databus23/helm-diff: 3.5.0
+    databus23/helm-diff: 3.6.0
     ahmetb/kubectx: 0.9.4
-    argoproj/argo-cd: 2.4.8
-    crossplane/crossplane: 1.9.0
+    argoproj/argo-cd: 2.2.15
+    crossplane/crossplane: 1.10.0
     ahmetb/kubectl-tree: 0.4.2
     tohjustin/kube-lineage: 0.5.0
     itaysk/kubectl-neat: 2.0.3
     corneliusweig/ketall: 1.3.8
 
     hadolint/hadolint: 2.10.0
-    zricethezav/gitleaks: 8.10.2
+    zricethezav/gitleaks: 8.15.0
 
-    casey/just: 1.4.0
+    casey/just: 1.5.0
     direnv/direnv: 2.32.1
-    starship/starship: 1.9.1
-    neovim/neovim: 0.7.2
-    junegunn/fzf: 0.32.1
-    zellij-org/zellij: 0.31.1
-    extrawurst/gitui: 0.20.1
+    starship/starship: 1.11.0
+    neovim/neovim: 0.8.0
+    junegunn/fzf: 0.34.0
+    zellij-org/zellij: 0.31.4
+    extrawurst/gitui: 0.21.0
 
     mozilla/sops: 3.7.3
     FiloSottile/age: 1.0.0
     harness/drone-cli: 1.5.0
-    hashicorp/vault: 1.11.2
+    hashicorp/vault: 1.12.0
 
   pip:
     pre-commit: 2.20.0
-    yamllint: 1.27.1
-    ansible: 6.2.0
-    hvac: 0.11.2
-    ansible-lint: 6.4.0
+    yamllint: 1.28.0
+    ansible: 6.5.0
+    hvac: 1.0.2
+    ansible-lint: 6.8.2
+    passlib[bcrypt]: 1.7.4
 
 dotenv:
   COMPOSE_PROJECT_NAME: TF-INFRA
