--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
       - .meta/.tflint.hcl:/home/user/.tflint.hcl
       - .meta/var/.bash_history:/home/user/.bash_history
       - .meta/var/zsh:/home/user/.zsh_tmp
+      - /var/run/docker.sock:/var/run/docker.sock
     env_file:
       - .env
     environment:
@@ -31,3 +32,5 @@ services:
       TERM: xterm-256color
     restart: "no"
     user: "1000"
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
