--- a/config.yaml
+++ b/config.yaml
@@ -70,7 +70,7 @@ tools:
     passlib[bcrypt]: 1.7.4
 
 dotenv:
-  COMPOSE_PROJECT_NAME: TF-INFRA
+  COMPOSE_PROJECT_NAME: tf-infra
   OP_ADDRESS: ""
   OP_EMAIL: ""
   OP_SECRET_KEY: ""
