--- a/config.yaml
+++ b/config.yaml
@@ -9,10 +9,10 @@ image: golang:{{ .version }}
 
 # Adding new tools require changing Dockerfile.tmpl
 tools:
-  golang/go: 1.20.4
-  kubernetes/kubectl: 1.27.1
+  golang/go: 1.20.6
+  kubernetes/kubectl: 1.27.4
   1password: 1.12.5
-  aws/aws-cli: 2.11.18
+  aws/aws-cli: 2.13.4
   GoogleCloudPlatform/cloud-sdk-docker: 403.0.0
 
   zsh-users/zsh-autosuggestions: 0.7.0
@@ -22,22 +22,22 @@ tools:
   junegunn/vim-plug: 8fdabfb
 
   github:
-    golangci/golangci-lint: 1.52.2
+    golangci/golangci-lint: 1.53.3
 
-    hashicorp/terraform: 1.4.6
-    gruntwork-io/terragrunt: 0.45.10
-    terraform-linters/tflint: 0.46.1
-    terraform-linters/tflint-ruleset-aws: 0.23.0
+    hashicorp/terraform: 1.5.4
+    gruntwork-io/terragrunt: 0.48.4
+    terraform-linters/tflint: 0.47.0
+    terraform-linters/tflint-ruleset-aws: 0.24.3
     aquasecurity/tfsec: 1.28.1
     tenable/terrascan: 1.18.1
     terraform-docs/terraform-docs: 0.16.0
-    plumber-cd/terraform-backend-git: 0.1.4
+    plumber-cd/terraform-backend-git: 0.1.5
     rebuy-de/aws-nuke: 2.21.2
 
-    helm/helm: 3.11.3
+    helm/helm: 3.12.2
     roboll/helmfile: 0.144.0
-    databus23/helm-diff: 3.7.0
-    ahmetb/kubectx: 0.9.4
+    databus23/helm-diff: 3.8.1
+    ahmetb/kubectx: 0.9.5
     argoproj/argo-cd: 2.5.8
     crossplane/crossplane: 1.10.2
     ahmetb/kubectl-tree: 0.4.3
@@ -46,27 +46,27 @@ tools:
     corneliusweig/ketall: 1.3.8
 
     hadolint/hadolint: 2.12.0
-    gitleaks/gitleaks: 8.16.3
+    gitleaks/gitleaks: 8.17.0
 
-    casey/just: 1.13.0
-    direnv/direnv: 2.32.2
-    starship/starship: 1.14.2
-    neovim/neovim: 0.9.0
-    junegunn/fzf: 0.40.0
-    zellij-org/zellij: 0.36.0
+    casey/just: 1.14.0
+    direnv/direnv: 2.32.3
+    starship/starship: 1.15.0
+    neovim/neovim: 0.9.1
+    junegunn/fzf: 0.42.0
+    zellij-org/zellij: 0.37.2
     gsamokovarov/jump: 0.51.0
 
-    mozilla/sops: 3.7.3
+    getsops/sops: 3.7.3
     FiloSottile/age: 1.1.1
     harness/drone-cli: 1.7.0
-    hashicorp/vault: 1.13.2
+    hashicorp/vault: 1.13.3
 
   pip:
-    pre-commit: 3.3.1
-    yamllint: 1.31.0
-    ansible: 7.5.0
-    hvac: 1.1.0
-    ansible-lint: 6.16.0
+    pre-commit: 3.3.3
+    yamllint: 1.32.0
+    ansible: 8.2.0
+    hvac: 1.1.1
+    ansible-lint: 6.17.2
     passlib[bcrypt]: 1.7.4
 
 dotenv:
