--- a/config.yaml
+++ b/config.yaml
@@ -10,7 +10,7 @@ image: golang:{{ .version }}
 # Adding new tools require changing Dockerfile.tmpl
 tools:
   golang/go: 1.20.6
-  kubernetes/kubectl: 1.27.4
+  kubernetes/kubectl: 1.28.2
   1password: 1.12.5
   aws/aws-cli: 2.13.5
   GoogleCloudPlatform/cloud-sdk-docker: 403.0.0
@@ -19,22 +19,22 @@ tools:
   zsh-users/zsh-syntax-highlighting: 0.7.1
   zsh-users/zsh-completions: 0.33.0
 
-  junegunn/vim-plug: 8fdabfb
+  enabled:
+    kubernetes: true
 
   github:
-    golangci/golangci-lint: 1.53.3
+    golangci/golangci-lint: 1.54.2
 
-    hashicorp/terraform: 1.5.4
-    gruntwork-io/terragrunt: 0.48.5
-    terraform-linters/tflint: 0.47.0
-    terraform-linters/tflint-ruleset-aws: 0.25.0
-    aquasecurity/tfsec: 1.28.1
-    tenable/terrascan: 1.18.2
+    hashicorp/terraform: 1.6.1
+    gruntwork-io/terragrunt: 0.52.3
+    terraform-linters/tflint: 0.48.0
+    terraform-linters/tflint-ruleset-aws: 0.27.0
+    aquasecurity/tfsec: 1.28.4
+    tenable/terrascan: 1.18.3
     terraform-docs/terraform-docs: 0.16.0
-    plumber-cd/terraform-backend-git: 0.1.5
-    rebuy-de/aws-nuke: 2.21.2
+    plumber-cd/terraform-backend-git: 0.1.6
 
-    helm/helm: 3.12.2
+    helm/helm: 3.13.1
     roboll/helmfile: 0.144.0
     databus23/helm-diff: 3.8.1
     ahmetb/kubectx: 0.9.5
@@ -46,28 +46,27 @@ tools:
     corneliusweig/ketall: 1.3.8
 
     hadolint/hadolint: 2.12.0
-    gitleaks/gitleaks: 8.17.0
+    gitleaks/gitleaks: 8.18.0
 
-    casey/just: 1.14.0
+    casey/just: 1.15.0
     direnv/direnv: 2.32.3
     starship/starship: 1.16.0
-    AstroNvim/AstroNvim: 3.34.2
-    junegunn/fzf: 0.42.0
-    zellij-org/zellij: 0.37.2
+    AstroNvim/AstroNvim: 3.37.6
+    junegunn/fzf: 0.43.0
     gsamokovarov/jump: 0.51.0
 
-    getsops/sops: 3.7.3
+    getsops/sops: 3.8.1
     FiloSottile/age: 1.1.1
     harness/drone-cli: 1.7.0
-    hashicorp/vault: 1.13.3
+    hashicorp/vault: 1.15.0
 
-    neovim/neovim: 0.9.1
+    neovim/neovim: 0.9.4
   pip:
-    pre-commit: 3.3.3
+    pre-commit: 3.5.0
     yamllint: 1.32.0
-    ansible: 8.2.0
-    hvac: 1.1.1
-    ansible-lint: 6.17.2
+    ansible: 8.5.0
+    hvac: 1.2.1
+    ansible-lint: 6.20.3
     passlib[bcrypt]: 1.7.4
 
 dotenv:
