--- a/config.yaml
+++ b/config.yaml
@@ -22,7 +22,8 @@ tools:
   neovim/neovim: 0.9.4
 
   enabled:
-    kubernetes: true
+    gcp: false
+    kubernetes: false
 
   github:
     golangci/golangci-lint: 1.55.2
