--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - .ws/tools/.tflint.hcl:/home/user/.tflint.hcl
       - .ws/var/zsh:/home/user/.zsh_tmp
       - .ws/var/jump:/home/user/.jump
+      - .ws/var/packer:/home/user/.config/packer
       - /var/run/docker.sock:/var/run/docker.sock
     env_file:
       - .env
