--- a/config.yaml
+++ b/config.yaml
@@ -5,21 +5,20 @@ shell: zsh
 username: vtvz
 
 # Use "alpine" if you don't need tests
-image: golang:{{ .version }}
+image: ubuntu:24.04
 
 # Adding new tools require changing Dockerfile.tmpl
 tools:
-  golang/go: 1.22.2
   kubernetes/kubectl: 1.28.2
   1password: 1.12.9
-  aws/aws-cli: 2.15.41
+  aws/aws-cli: 2.16.10
   GoogleCloudPlatform/cloud-sdk-docker: 403.0.0
 
   zsh-users/zsh-autosuggestions: 0.7.0
-  zsh-users/zsh-syntax-highlighting: 0.7.1
-  zsh-users/zsh-completions: 0.33.0
+  zsh-users/zsh-syntax-highlighting: 0.8.0
+  zsh-users/zsh-completions: 0.35.0
 
-  neovim/neovim: 0.9.5
+  neovim/neovim: 0.10.0
 
   enabled:
     gcp: false
@@ -30,51 +29,49 @@ tools:
       - "github.com/hashicorp/amazon"
 
   github:
-    golangci/golangci-lint: 1.57.2
-
-    hashicorp/terraform: 1.8.2
-    gruntwork-io/terragrunt: 0.57.9
-    terraform-linters/tflint: 0.50.3
-    terraform-linters/tflint-ruleset-aws: 0.30.0
-    aquasecurity/tfsec: 1.28.5
+    hashicorp/terraform: 1.8.5
+    gruntwork-io/terragrunt: 0.59.4
+    terraform-linters/tflint: 0.51.1
+    terraform-linters/tflint-ruleset-aws: 0.32.0
+    aquasecurity/tfsec: 1.28.6
     tenable/terrascan: 1.19.1
-    terraform-docs/terraform-docs: 0.17.0
+    terraform-docs/terraform-docs: 0.18.0
     plumber-cd/terraform-backend-git: 0.1.6
-    hashicorp/packer: 1.10.3
+    hashicorp/packer: 1.11.0
 
-    helm/helm: 3.14.4
+    helm/helm: 3.15.2
     roboll/helmfile: 0.144.0
-    databus23/helm-diff: 3.9.5
+    databus23/helm-diff: 3.9.8
     ahmetb/kubectx: 0.9.5
-    argoproj/argo-cd: 2.10.7
-    crossplane/crossplane: 1.15.2
+    argoproj/argo-cd: 2.11.3
+    crossplane/crossplane: 1.16.0
     ahmetb/kubectl-tree: 0.4.3
     tohjustin/kube-lineage: 0.5.0
     itaysk/kubectl-neat: 2.0.3
     corneliusweig/ketall: 1.3.8
 
     hadolint/hadolint: 2.12.0
-    gitleaks/gitleaks: 8.18.2
+    gitleaks/gitleaks: 8.18.4
 
-    go-task/task: 3.36.0
-    casey/just: 1.25.2
+    go-task/task: 3.37.2
+    casey/just: 1.29.1
     direnv/direnv: 2.34.0
-    starship/starship: 1.18.2
-    AstroNvim/AstroNvim: 4.2.1
-    junegunn/fzf: 0.50.0
+    starship/starship: 1.19.0
+    AstroNvim/AstroNvim: 4.10.4
+    junegunn/fzf: 0.53.0
     gsamokovarov/jump: 0.51.0
 
     getsops/sops: 3.8.1
-    FiloSottile/age: 1.1.1
+    FiloSottile/age: 1.2.0
     harness/drone-cli: 1.8.0
-    hashicorp/vault: 1.16.2
+    hashicorp/vault: 1.17.0
 
   pip:
-    pre-commit: 3.7.0
+    pre-commit: 3.7.1
     yamllint: 1.35.1
-    ansible: 9.5.1
-    hvac: 2.1.0
-    ansible-lint: 24.2.2
+    ansible: 10.0.1
+    hvac: 2.2.0
+    ansible-lint: 24.6.0
     passlib[bcrypt]: 1.7.4
 
 dotenv:
