--- a/config.yaml
+++ b/config.yaml
@@ -11,7 +11,7 @@ image: ubuntu:24.04
 tools:
   kubernetes/kubectl: 1.31.0
   1password: 1.12.9
-  aws/aws-cli: 2.24.1
+  aws/aws-cli: 2.24.18
   GoogleCloudPlatform/cloud-sdk-docker: 403.0.0
 
   zsh-users/zsh-autosuggestions: 0.7.0
@@ -32,51 +32,52 @@ tools:
       - "github.com/hashicorp/amazon"
 
   github:
-    hashicorp/terraform: 1.10.5
-    gruntwork-io/terragrunt: 0.73.0
+    hashicorp/terraform: 1.11.1
+    gruntwork-io/terragrunt: 0.75.0
     terraform-linters/tflint: 0.55.1
-    terraform-linters/tflint-ruleset-aws: 0.37.0
+    terraform-linters/tflint-ruleset-aws: 0.38.0
     GoogleCloudPlatform/terraformer: 0.8.24
     aquasecurity/tfsec: 1.28.13
     tenable/terrascan: 1.19.9
     terraform-docs/terraform-docs: 0.19.0
     plumber-cd/terraform-backend-git: 0.1.8
     hashicorp/packer: 1.12.0
-    getgrit/gritql: 0.1.0-alpha.1738896512
+    getgrit/gritql: 0.1.0-alpha.1740749968
 
-    helm/helm: 3.17.0
+    helm/helm: 3.17.1
     roboll/helmfile: 0.144.0
     databus23/helm-diff: 3.10.0
     ahmetb/kubectx: 0.9.5
-    argoproj/argo-cd: 2.14.2
-    crossplane/crossplane: 1.18.2
+    argoproj/argo-cd: 2.14.4
+    crossplane/crossplane: 1.19.0
     ahmetb/kubectl-tree: 0.4.3
     tohjustin/kube-lineage: 0.5.0
     itaysk/kubectl-neat: 2.0.4
     corneliusweig/ketall: 1.3.8
 
     hadolint/hadolint: 2.12.0
-    gitleaks/gitleaks: 8.23.3
+    gitleaks/gitleaks: 8.24.0
 
     go-task/task: 3.41.0
     casey/just: 1.39.0
     direnv/direnv: 2.35.0
     starship/starship: 1.22.1
-    AstroNvim/AstroNvim: 4.29.3
-    junegunn/fzf: 0.59.0
+    AstroNvim/AstroNvim: 4.32.1
+    junegunn/fzf: 0.60.3
     gsamokovarov/jump: 0.51.0
+    mikefarah/yq: 4.45.1
 
     getsops/sops: 3.9.4
     FiloSottile/age: 1.2.1
     harness/drone-cli: 1.8.0
-    hashicorp/vault: 1.18.4
+    hashicorp/vault: 1.19.0
 
   pip:
     pre-commit: 4.1.0
     yamllint: 1.35.1
-    ansible: 11.2.0
+    ansible: 11.3.0
     hvac: 2.3.0
-    ansible-lint: 25.1.2
+    ansible-lint: 25.1.3
     passlib[bcrypt]: 1.7.4
 
 dotenv:
