--- a/config.yaml
+++ b/config.yaml
@@ -11,7 +11,7 @@ image: ubuntu:24.04
 tools:
   kubernetes/kubectl: 1.31.0
   1password: 1.12.9
-  aws/aws-cli: 2.24.26
+  aws/aws-cli: 2.25.1
   GoogleCloudPlatform/cloud-sdk-docker: 403.0.0
 
   zsh-users/zsh-autosuggestions: 0.7.0
@@ -33,7 +33,7 @@ tools:
 
   github:
     hashicorp/terraform: 1.11.2
-    gruntwork-io/terragrunt: 0.76.1
+    gruntwork-io/terragrunt: 0.76.6
     terraform-linters/tflint: 0.55.1
     terraform-linters/tflint-ruleset-aws: 0.38.0
     GoogleCloudPlatform/terraformer: 0.8.24
@@ -48,15 +48,16 @@ tools:
     roboll/helmfile: 0.144.0
     databus23/helm-diff: 3.10.0
     ahmetb/kubectx: 0.9.5
-    argoproj/argo-cd: 2.14.6
+    argoproj/argo-cd: 2.14.7
     crossplane/crossplane: 1.19.0
     ahmetb/kubectl-tree: 0.4.3
     tohjustin/kube-lineage: 0.5.0
     itaysk/kubectl-neat: 2.0.4
     corneliusweig/ketall: 1.3.8
+    eksctl-io/eksctl: 0.206.0
 
     hadolint/hadolint: 2.12.0
-    gitleaks/gitleaks: 8.24.0
+    gitleaks/gitleaks: 8.24.2
 
     go-task/task: 3.42.1
     casey/just: 1.40.0
@@ -74,7 +75,7 @@ tools:
 
   pip:
     pre-commit: 4.2.0
-    yamllint: 1.36.2
+    yamllint: 1.37.0
     ansible: 11.3.0
     hvac: 2.3.0
     ansible-lint: 25.1.3
