--- a/config.yaml
+++ b/config.yaml
@@ -11,7 +11,7 @@ image: ubuntu:24.04
 tools:
   kubernetes/kubectl: 1.31.0
   1password: 1.12.9
-  aws/aws-cli: 2.27.62
+  aws/aws-cli: 2.28.0
   GoogleCloudPlatform/cloud-sdk-docker: 403.0.0
 
   zsh-users/zsh-autosuggestions: 0.7.0
@@ -41,8 +41,8 @@ tools:
     tenable/terrascan: 1.19.9
     terraform-docs/terraform-docs: 0.20.0
     plumber-cd/terraform-backend-git: 0.1.8
-    hashicorp/packer: 1.13.1
-    getgrit/gritql: 0.1.0-alpha.1743007075
+    hashicorp/packer: 1.14.0
+    honeycombio/gritql: 0.1.0-alpha.1743007075
 
     helm/helm: 3.18.4
     roboll/helmfile: 0.144.0
