--- a/config.yaml
+++ b/config.yaml
@@ -11,14 +11,14 @@ image: ubuntu:24.04
 tools:
   kubernetes/kubectl: 1.31.0
   1password: 1.12.9
-  aws/aws-cli: 2.28.0
+  aws/aws-cli: 2.31.6
   GoogleCloudPlatform/cloud-sdk-docker: 403.0.0
 
   zsh-users/zsh-autosuggestions: 0.7.0
   zsh-users/zsh-syntax-highlighting: 0.8.0
   zsh-users/zsh-completions: 0.35.0
 
-  neovim/neovim: 0.11.3
+  neovim/neovim: 0.11.4
   golang/go: 1.23.3
 
   enabled:
@@ -32,53 +32,54 @@ tools:
       - "github.com/hashicorp/amazon"
 
   github:
-    hashicorp/terraform: 1.12.2
-    gruntwork-io/terragrunt: 0.83.2
-    terraform-linters/tflint: 0.58.1
-    terraform-linters/tflint-ruleset-aws: 0.41.0
+    hashicorp/terraform: 1.13.3
+    gruntwork-io/terragrunt: 0.88.1
+    terraform-linters/tflint: 0.59.1
+    terraform-linters/tflint-ruleset-aws: 0.43.0
     GoogleCloudPlatform/terraformer: 0.8.30
     aquasecurity/tfsec: 1.28.14
     tenable/terrascan: 1.19.9
     terraform-docs/terraform-docs: 0.20.0
     plumber-cd/terraform-backend-git: 0.1.8
-    hashicorp/packer: 1.14.0
+    hashicorp/packer: 1.14.2
     honeycombio/gritql: 0.1.0-alpha.1743007075
 
-    helm/helm: 3.18.4
+    helm/helm: 3.19.0
     roboll/helmfile: 0.144.0
-    databus23/helm-diff: 3.12.4
+    databus23/helm-diff: 3.13.0
     ahmetb/kubectx: 0.9.5
-    argoproj/argo-cd: 3.0.12
-    crossplane/crossplane: 1.20.0
+    argoproj/argo-cd: 3.1.8
+    crossplane/crossplane: 2.0.2
     ahmetb/kubectl-tree: 0.4.3
     tohjustin/kube-lineage: 0.5.0
     itaysk/kubectl-neat: 2.0.4
     corneliusweig/ketall: 1.3.8
-    eksctl-io/eksctl: 0.212.0
+    eksctl-io/eksctl: 0.214.0
+    robusta-dev/krr: 1.26.3
 
-    hadolint/hadolint: 2.12.0
+    hadolint/hadolint: 2.14.0
     gitleaks/gitleaks: 8.28.0
 
-    go-task/task: 3.44.1
-    casey/just: 1.42.4
+    go-task/task: 3.45.4
+    casey/just: 1.43.0
     direnv/direnv: 2.37.1
     starship/starship: 1.23.0
-    AstroNvim/AstroNvim: 5.3.6
-    junegunn/fzf: 0.65.0
+    AstroNvim/AstroNvim: 5.3.12
+    junegunn/fzf: 0.65.2
     gsamokovarov/jump: 0.51.0
-    mikefarah/yq: 4.47.1
+    mikefarah/yq: 4.47.2
 
-    getsops/sops: 3.10.2
+    getsops/sops: 3.11.0
     FiloSottile/age: 1.2.1
     harness/drone-cli: 1.9.0
-    hashicorp/vault: 1.20.1
+    hashicorp/vault: 1.20.4
 
   pip:
-    pre-commit: 4.2.0
+    pre-commit: 4.3.0
     yamllint: 1.37.1
-    ansible: 11.8.0
+    ansible: 12.0.0
     hvac: 2.3.0
-    ansible-lint: 25.7.0
+    ansible-lint: 25.9.1
     passlib[bcrypt]: 1.7.4
 
 dotenv:
