--- a/config.yaml
+++ b/config.yaml
@@ -43,6 +43,7 @@ tools:
     plumber-cd/terraform-backend-git: 0.1.8
     hashicorp/packer: 1.14.2
     honeycombio/gritql: 0.1.0-alpha.1743007075
+    evilmartians/lefthook: 1.13.6
 
     helm/helm: 3.19.0
     roboll/helmfile: 0.144.0
@@ -55,7 +56,6 @@ tools:
     itaysk/kubectl-neat: 2.0.4
     corneliusweig/ketall: 1.3.8
     eksctl-io/eksctl: 0.214.0
-    robusta-dev/krr: 1.26.3
 
     hadolint/hadolint: 2.14.0
     gitleaks/gitleaks: 8.28.0
