--- a/config.yaml
+++ b/config.yaml
@@ -13,6 +13,7 @@ tools:
   1password: 1.12.9
   aws/aws-cli: 2.31.8
   GoogleCloudPlatform/cloud-sdk-docker: 403.0.0
+  gnu/parallel: "20250922"
 
   zsh-users/zsh-autosuggestions: 0.7.0
   zsh-users/zsh-syntax-highlighting: 0.8.0
@@ -23,7 +24,7 @@ tools:
 
   enabled:
     gcp: false
-    kubernetes: false
+    kubernetes: true
     golang: false
     terraformer: false
 
@@ -33,7 +34,7 @@ tools:
 
   github:
     hashicorp/terraform: 1.13.3
-    gruntwork-io/terragrunt: 0.88.1
+    gruntwork-io/terragrunt: 0.89.0
     terraform-linters/tflint: 0.59.1
     terraform-linters/tflint-ruleset-aws: 0.43.0
     GoogleCloudPlatform/terraformer: 0.8.30
@@ -93,6 +94,6 @@ dotenv:
 extraPackages:
   - rsync
   - graphviz
-  - zsh
-  - bsdmainutils
-  - man
+  - autoconf
+  - automake
+  - groff
